--- a/projects/hdp-cluster-kerberos/kerberos/Dockerfile
+++ b/projects/hdp-cluster-kerberos/kerberos/Dockerfile
@@ -4,5 +4,5 @@ MAINTAINER "Albert Gimenez"
 
 RUN yum install -y krb5-server krb5-libs krb5-workstation
 ADD krb5.conf /etc/
-ADD create_krb_db.sh /tmp/
-RUN /tmp/create_krb_db.sh
+ADD kdc.conf /var/kerberos/krb5kdc/
+ADD kadm.acl /var/kerberos/krb5kdc/
