--- a/projects/hdp-cluster-kerberos/kerberos/krb5.conf
+++ b/projects/hdp-cluster-kerberos/kerberos/krb5.conf
@@ -4,7 +4,7 @@
  admin_server = FILE:/var/log/kadmind.log
 
 [libdefaults]
- default_realm = EXAMPLE.COM
+ default_realm = HDPCLUSTER.COM
  dns_lookup_realm = false
  dns_lookup_kdc = false
  ticket_lifetime = 24h
@@ -12,13 +12,11 @@
  forwardable = true
 
 [realms]
-HDCLUSTER.COM =  {
- kdc = kerberos.hdpcluster
- admin_server = kerberos.hdpcluster
-}
+ HDPCLUSTER.COM = {
+  kdc = kerberos.hdpcluster.com
+  admin_server = kerberos.hdpcluster.com
+ }
 
 [domain_realm]
  .hdpcluster.com = HDPCLUSTER.COM
  hdpcluster.com = HDPCLUSTER.COM
- .hdpcluster = HDPCLUSTER.COM
- hdpcluster = HDPCLUSTER.COM
