--- a/projects/hdp-cluster-kerberos/kerberos/krb5.conf
+++ b/projects/hdp-cluster-kerberos/kerberos/krb5.conf
@@ -4,7 +4,7 @@
  admin_server = FILE:/var/log/kadmind.log
 
 [libdefaults]
- default_realm = HDPCLUSTER.COM
+ default_realm = HDPCLUSTER
  dns_lookup_realm = false
  dns_lookup_kdc = false
  ticket_lifetime = 24h
@@ -12,11 +12,11 @@
  forwardable = true
 
 [realms]
- HDPCLUSTER.COM = {
-  kdc = kerberos.hdpcluster.com
-  admin_server = kerberos.hdpcluster.com
+ HDPCLUSTER = {
+  kdc = kerberos.hdpcluster
+  admin_server = kerberos.hdpcluster
  }
 
 [domain_realm]
- .hdpcluster.com = HDPCLUSTER.COM
- hdpcluster.com = HDPCLUSTER.COM
+ .hdpcluster = HDPCLUSTER
+ hdpcluster = HDPCLUSTER
