Expect added, start with supervisor

--- a/projects/hdp-cluster-kerberos/kerberos/Dockerfile
+++ b/projects/hdp-cluster-kerberos/kerberos/Dockerfile
@@ -8,3 +8,13 @@ ADD kdc.conf /var/kerberos/krb5kdc/
 ADD kadm.acl /var/kerberos/krb5kdc/
 ADD kadm.acl /var/kerberos/krb5kdc/kadm5.acl
 EXPOSE 88
+
+RUN mkdir /scripts
+ADD create_krb_db.sh /scripts/
+ADD create_krb_db.exp /scripts/
+ADD create_admin_principal.exp /scripts/
+RUN /scripts/create_krb_db.sh
+RUN yum install -y python-setuptools
+RUN easy_install supervisor
+COPY supervisord.conf /etc/supervisord.conf
+#CMD ["/usr/bin/supervisord", "-c /etc/supervisord.conf"]
