Start kerberos, ntpd and sshd with supervisor

--- a/projects/hdp-cluster-kerberos/kerberos/Dockerfile
+++ b/projects/hdp-cluster-kerberos/kerberos/Dockerfile
@@ -3,18 +3,19 @@ FROM  node-sandbox:0.1
 MAINTAINER "Albert Gimenez"
 
 RUN yum install -y krb5-server krb5-libs krb5-workstation
-ADD krb5.conf /etc/
-ADD kdc.conf /var/kerberos/krb5kdc/
-ADD kadm.acl /var/kerberos/krb5kdc/
-ADD kadm.acl /var/kerberos/krb5kdc/kadm5.acl
+COPY krb5.conf /etc/
+COPY kdc.conf /var/kerberos/krb5kdc/
+COPY kadm.acl /var/kerberos/krb5kdc/
+COPY kadm.acl /var/kerberos/krb5kdc/kadm5.acl
 EXPOSE 88
 
 RUN mkdir /scripts
-ADD create_krb_db.sh /scripts/
-ADD create_krb_db.exp /scripts/
-ADD create_admin_principal.exp /scripts/
+COPY create_krb_db.sh /scripts/
+COPY create_krb_db.exp /scripts/
+COPY create_admin_principal.exp /scripts/
 RUN /scripts/create_krb_db.sh
 RUN yum install -y python-setuptools
 RUN easy_install supervisor
+COPY supervisor /scripts/
 COPY supervisord.conf /etc/supervisord.conf
-#CMD ["/usr/bin/supervisord", "-c /etc/supervisord.conf"]
+CMD /usr/bin/supervisord -c /etc/supervisord.conf
