--- a/projects/hdp-cluster-kerberos/kerberos/supervisord.conf
+++ b/projects/hdp-cluster-kerberos/kerberos/supervisord.conf
@@ -1,8 +1,14 @@
 [supervisord]
 nodaemon=true
 
-[program:krb5kdc]
-command=/usr/sbin/krb5kdc -P /var/run/krb5kdc.pid
+[program:run_ntpd_fg]
+command=/scripts/run_ntpd_fg.sh
 
-[program:kadmin]
-command=/usr/sbin/kadmind -P /var/run/kadmind.pid
+[program:run_krb5kdc_fg]
+command=/scripts/run_krb5kdc_fg.sh
+
+[program:run_kadmind_fg]
+command=/scripts/run_kadmind_fg.sh
+
+[program:run_sshd_fg]
+command=/scripts/run_sshd_fg.sh
