--- a/projects/hdp-cluster/kerberos/Dockerfile
+++ b/projects/hdp-cluster/kerberos/Dockerfile
@@ -14,8 +14,6 @@ COPY create_krb_db.sh /scripts/
 COPY create_krb_db.exp /scripts/
 COPY create_admin_principal.exp /scripts/
 RUN /scripts/create_krb_db.sh
-RUN yum install -y python-setuptools
-RUN easy_install supervisor
-COPY supervisor /scripts/
+COPY supervisor /scripts/supervisor
 COPY supervisord.conf /etc/supervisord.conf
 CMD /usr/bin/supervisord -c /etc/supervisord.conf
